--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "pjain2",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.4"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongodb": "^3.1.4",
+    "mongoose": "^5.2.13",
+    "nodemon": "^1.18.4"
   }
 }
