--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Todo api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "author": "pjain2",
   "license": "ISC",
@@ -12,7 +13,12 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^3.1.4",
-    "mongoose": "^5.2.13",
-    "nodemon": "^1.18.4"
+    "mongoose": "^5.2.13"
+  },
+  "devDependencies": {
+    "expect": "^23.5.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.4",
+    "supertest": "^3.3.0"
   }
 }
