--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "Todo api",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon server/server.js",  
-    "test": "mocha server/**/*.test.js",
+    "start": "nodemon server/server.js",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\"  && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "author": "pjain2",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
     "loadash": "^1.0.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.4",
-    "mongoose": "^5.2.13"
+    "mongoose": "^5.2.13",
+    "validator": "^10.7.1"
   },
   "devDependencies": {
     "expect": "^23.5.0",
